--- a/Asssets/style.css
+++ b/Asssets/style.css
@@ -3,9 +3,15 @@ body {
 }
 
 h1 {
-  color: white;
+  color: black;
+  background-color: white;
+  text-align: center;
+  margin: 5% 20%;
 }
 
 h2 {
-  color: bisque;
+  color: black;
+  background-color: bisque;
+  text-align: center;
+  margin: 1% 5%;
 }
